--- a/saitae-web/src/main/webapp/pages/consultasPS.xhtml
+++ b/saitae-web/src/main/webapp/pages/consultasPS.xhtml
@@ -2,9 +2,10 @@
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 template="./../WEB-INF/template/plantilla1.xhtml"
-                xmlns:h="http://xmlns.jcp.org/jsf/html">
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
     <ui:define name="content">
-        
+        <f:event listener="#{consultasPSController.postRender()}" type="preRenderView"/>
         <h:form id="form">
 
         </h:form>
